@@ -31,4 +31,5 @@ noinst_PROGRAMS =  	\
 	test3		\
 	test7		\
 	test8		\
-	test9
+	test9		\
+	test10
